[tool.poetry]
name = "tree-partitioning"
version = "0.1.0"
description = "Tree partitioning algorithms for power networks"
authors = ["Leon Lan <leon.lanyidong@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.4.3"
pandapower = "^2.10.1"
matplotlib = "^3.5.2"
networkx = "^2.8.5"
scikit-learn = "^1.1.1"
pyomo = "^6.4.1"
gurobipy = "^9.5.2"
numba = "^0.56.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
